<resources>
	<string name="app_name">Retail Store</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="product_image">Product Image</string>
	<string name="categories">Categories</string>
	<string name="author">Jordi Albert</string>
	<string name="cart">Shopping Cart</string>
	<string name="add_to_cart">Add to Cart</string>
	<string name="in_cart">In Cart:</string>
	<string name="close">Close</string>
	<string name="quantity">Q.</string>
	<string name="total">Total</string>
	<string name="remove_from_cart">Remove from Cart</string>
</resources>
