<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black_transparent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:background="@drawable/bordered_white"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<ImageView
			android:id="@+id/close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:contentDescription="@string/close"
			android:src="@drawable/ic_close_black_24dp" />

		<ImageView
			android:id="@+id/product_image"
			android:layout_width="120dp"
			android:layout_height="120dp"
			android:contentDescription="@string/product_image" />

		<TextView
			android:id="@+id/product_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Title" />

		<TextView
			android:id="@+id/product_price"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

		<ImageView
			android:id="@+id/add_to_cart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:contentDescription="@string/add_to_cart"
			android:src="@drawable/ic_add_shopping_cart_black_48dp" />

		<TextView
			android:text="@string/in_cart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

		<TextView
			android:id="@+id/in_cart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
	</LinearLayout>
</ScrollView>