<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black_transparent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:background="@drawable/bordered_white"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<ImageView
			android:id="@+id/close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:contentDescription="@string/close"
			android:src="@drawable/ic_close_black_24dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:text="@string/cart"
			android:textAppearance="@style/TextAppearance.AppCompat.Title" />

		<ListView
			android:id="@+id/cart_list"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginLeft="3dp"
			android:layout_marginRight="3dp"
			android:layout_weight="1" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:gravity="center_horizontal"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/total"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

			<TextView
				android:id="@+id/cart_total"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/activity_horizontal_margin"
				android:layout_marginRight="@dimen/activity_horizontal_margin"
				android:textAppearance="@style/TextAppearance.AppCompat.Title" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>